samples/_failures_safe/1761541950_dd5ee3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dedf0bd6.c: In function ‘main’:
./samples/SAFE/__tmp_dedf0bd6.c:170:5: error: expected expression at end of input
  170 |     if (transpose_matrix(&mat2,
      |     ^~
./samples/SAFE/__tmp_dedf0bd6.c:170:5: error: expected declaration or statement at end of input
